@@ -2,6 +2,9 @@
 ---
 - Add --ignore-streamlength.
   TODO: Make mpg123 smarter to recognize concatenated streams, re-start the frame counter.
+AND TAKE PROPER CARE OF THAT HACK TO UN-IGNORE FRAMES FAR OVER LASTFRAME!
+This hack brings the sound, but also brings funky behaviour of mpg123 -k <n> ... with suddenly non-present verbose position info, for example.
+
 
 1.13.2
 ---
